@startuml Strategy_Recomendacao
title Strategy - Recomendação de produtos

interface IProductRecommendationStrategy {
  +Nome: string
  +Score(produto, request): int
}

class ProductRecommendationService {
  -strategies: IEnumerable<IProductRecommendationStrategy>
  +RecommendAsync(request, limit, cancellationToken)
}

class SkinHairRecommendationStrategy
class CategoryRecommendationStrategy
class VeganPriceRecommendationStrategy

ProductRecommendationService o-- IProductRecommendationStrategy
IProductRecommendationStrategy <|.. SkinHairRecommendationStrategy
IProductRecommendationStrategy <|.. CategoryRecommendationStrategy
IProductRecommendationStrategy <|.. VeganPriceRecommendationStrategy

note right of ProductRecommendationService
Combina estratégias e ordena produtos
pelo score calculado.
end note

@enduml
